Add gtest output

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,4 +20,4 @@ jobs:
       run: mkdir build && cd build && cmake .. -G Ninja && ninja
 
     - name: Run Unit Tests
-      run: cd build && ctest
+      run: cd build && ctest --output-on-failure
